--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,12 +5,12 @@ Version: 1.0
 Date: 2022-04-14
 Author: Alexander Rauhut
 Maintainer: Alexander Rauhut <alexraw@mailbox.org>
-Description: More details about what the package does. See
-          <http://cran.r-project.org/doc/manuals/r-release/R-exts.html#The-DESCRIPTION-file>
-          for details on how to write this part.
-License: GPL (>= 2)
-Suggests: tinytest
+Description: A package to help me get shredded and learn some sweet shinyr.
+License: GPL (>= 3)
+Suggests:
+    covr,
+    tinytest
 Encoding: UTF-8
 RoxygenNote: 7.1.2
-Imports: 
+Imports:
     shiny
